<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_camera_gles"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cgfay.cain.camerasample.activity.GLCaptureViewActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:id="@+id/layout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">
            <Button
                android:id="@+id/btn_view_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/btn_view_photo"/>

            <Button
                android:id="@+id/btn_take"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btn_take"/>

            <Button
                android:id="@+id/btn_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/btn_switch_camera"/>
        </FrameLayout>

        <com.cgfay.cain.camerasample.camera.CameraSurfaceView
            android:id="@+id/view_camera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/layout_btn" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:visibility="gone" />
</FrameLayout>
